# vfspp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: compiler_checks.cmake  toolchain-clang.cmake  toolchain.cmake
include/VFSPP/: 7zip.hpp  core.hpp  defines.hpp  memory.hpp  merged.hpp  system.hpp  util.hpp
lib/: CMakeLists.txt
lib/7z/: CMakeLists.txt
src/: CMakeLists.txt  VFSPP.cpp  compiler.h.in
src/7zip/: SevenZipFileEntry.cpp  SevenZipFileSystem.cpp
src/memory/: MemoryFileEntry.cpp  MemoryFileSystem.cpp
src/merged/: MergedEntry.cpp  MergedFileSystem.cpp
src/system/: PhysicalEntry.cpp  PhysicalFileSystem.cpp
test/: CMakeLists.txt  globals.cpp  globals.hpp
test/7zip/: 7zip.cpp
test/core/: core.cpp
test/memory/: memory.cpp
test/merged/: merged.cpp
test/resources/7z/: 7zip.7z
test/resources/system/: test1.txt
test/system/: directory.cpp  file.cpp
